tests/Tokens/invalid-hex-escape.bel
"\x1g"

# RUN: %not %belalang build %s 2>&1 | %FileCheck %s
# CHECK: error: Unknown escape string
# CHECK:  --> /home/guest/belalang/tests/Tokens/invalid-hex-escape.bel:1:2
# CHECK:   |
# CHECK: 1 | "\x1g"
# CHECK:   |  ^^^^ Unknown escape string
# CHECK: Error: unknown escape string
